Bilder - Intrest.html
Ändrade storlek på bilder i Intrest.html. Tog även bort bilder från mappen som jag inte behövde

--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,14 @@ p {
 
 .tate-img {
     float: right;
+    height: 450px;
+    width: auto ;
 }
 
 .netflix-img {
     float: left;
-}
-
-.gym-img {
-    float: right;
+    height: auto;
+    width: 550px;
 }
 
 .profile-picture {
